--- a/PythonNumPyWorkspace/1. 배열 생성.ipynb
+++ b/PythonNumPyWorkspace/1. 배열 생성.ipynb
@@ -568,9 +568,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.72431929, 0.14287004, 0.39315426],\n",
-       "       [0.60287062, 0.65523592, 0.0954785 ],\n",
-       "       [0.58727922, 0.01530955, 0.82457169]])"
+       "array([[0.29704073, 0.87466922, 0.49572737],\n",
+       "       [0.89102563, 0.06875871, 0.38607122],\n",
+       "       [0.94703142, 0.4893396 , 0.89623915]])"
       ]
      },
      "execution_count": 17,
@@ -599,9 +599,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 1],\n",
-       "       [4, 7, 6],\n",
-       "       [0, 6, 6]])"
+       "array([[8, 5, 6],\n",
+       "       [8, 5, 3],\n",
+       "       [7, 2, 3]])"
       ]
      },
      "execution_count": 18,
@@ -631,9 +631,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1.41552997,  0.40589214,  0.65899925],\n",
-       "       [ 0.11002147, -0.90435756,  1.16882699],\n",
-       "       [-0.30981297,  0.73437315, -2.10254471]])"
+       "array([[ 0.31369677,  0.58985949,  1.03583029],\n",
+       "       [ 0.11984274, -0.68567923, -0.4033952 ],\n",
+       "       [-0.06597317, -2.21634435,  1.10536162]])"
       ]
      },
      "execution_count": 19,
@@ -662,9 +662,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.09099396, 0.1861959 , 0.91748939],\n",
-       "       [0.29193244, 0.5689871 , 0.64953483],\n",
-       "       [0.42915423, 0.10607471, 0.80258091]])"
+       "array([[0.8233182 , 0.05418796, 0.90702724],\n",
+       "       [0.970676  , 0.48981042, 0.79574494],\n",
+       "       [0.04966927, 0.11964272, 0.75380681]])"
       ]
      },
      "execution_count": 20,
@@ -693,9 +693,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[-1.20814062,  1.06235732, -0.84703766],\n",
-       "       [ 0.43885607, -0.07754347,  0.4020939 ],\n",
-       "       [ 1.18233092, -2.15869793, -1.01286692]])"
+       "array([[ 0.54700993, -0.14289397,  1.69175443],\n",
+       "       [-0.24252403,  0.83978614,  0.30343342],\n",
+       "       [-0.92173305, -0.09274038, -1.26235465]])"
       ]
      },
      "execution_count": 21,
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "id": "e412c2ff",
    "metadata": {},
    "outputs": [
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "id": "ebb2f516",
    "metadata": {},
    "outputs": [
@@ -1225,10 +1225,10 @@
       "[[1 2 3]\n",
       " [4 5 6]\n",
       " [7 8 9]]\n",
-      "[[ True False False]\n",
-      " [ True  True False]\n",
-      " [False False  True]]\n",
-      "[1 4 5 9]\n"
+      "[[False  True False]\n",
+      " [False  True False]\n",
+      " [ True  True False]]\n",
+      "[2 5 7 8]\n"
      ]
     }
    ],
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "id": "e88c41ee",
    "metadata": {},
    "outputs": [
@@ -1277,9 +1277,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "id": "e24f9f08",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1314,6 +1316,777 @@
     "print(a2[2, col])\n",
     "print(a2[row, 1:])\n",
     "print(a2[1:, col])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "deabc8c8",
+   "metadata": {},
+   "source": [
+    "## 3. 배열 값 삽입/수정/삭제/복사"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4563d770",
+   "metadata": {},
+   "source": [
+    "### 배열 값 삽입\n",
+    "- insert(): 배열의 특정 위치에 값 삽입  \n",
+    "- axis를 지정하지 않으면 1차원 배열로 변환  \n",
+    "- 추가할 방향을 axis로 지정  \n",
+    "- 원본 배열 변경없이 새로운 배열 반환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "6a229d28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 6 4 5]\n",
+      "[10  4  5  6  4  5]\n",
+      "[ 4  5 10  6  4  5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a1)\n",
+    "b1 = np.insert(a1, 0, 10)\n",
+    "print(b1)\n",
+    "c1 = np.insert(a1, 2, 10)\n",
+    "print(c1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "591360fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "[[ 1  2  3]\n",
+      " [10 10 10]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]]\n",
+      "[[ 1 10  2  3]\n",
+      " [ 4 10  5  6]\n",
+      " [ 7 10  8  9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a2)\n",
+    "b2 = np.insert(a2, 1, 10, axis=0)\n",
+    "print(b2)\n",
+    "c2 = np.insert(a2, 1, 10, axis=1)\n",
+    "print(c2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25874fe2",
+   "metadata": {},
+   "source": [
+    "### 배열 값 수정\n",
+    "- 배열의 인덱싱으로 접근하여 값 수정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "8380f87b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9 0 3 0 0]\n",
+      "[1 2 3 0 0]\n",
+      "[9 2 3 0 0]\n",
+      "[9 0 3 0 0]\n",
+      "[9 4 3 4 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a1)\n",
+    "a1[0] = 1\n",
+    "a1[1] = 2\n",
+    "a1[2] = 3\n",
+    "print(a1)\n",
+    "a1[:1] = 9\n",
+    "print(a1)\n",
+    "i = np.array([1, 3, 4]) # 팬시 인덱싱\n",
+    "a1[i] = 0\n",
+    "print(a1)\n",
+    "a1[i] += 4\n",
+    "print(a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "e838f0a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 1]\n",
+      " [4 2 0]\n",
+      " [7 8 9]]\n",
+      "[[1 1 1]\n",
+      " [4 2 0]\n",
+      " [7 8 3]]\n",
+      "[[1 1 1]\n",
+      " [4 2 9]\n",
+      " [7 8 9]]\n",
+      "[[1 0 1]\n",
+      " [4 2 0]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a2)\n",
+    "a2[0, 0] = 1\n",
+    "a2[1, 1] = 2\n",
+    "a2[2, 2] = 3\n",
+    "a2[0] = 1\n",
+    "print(a2)\n",
+    "a2[1:, 2] = 9\n",
+    "print(a2)\n",
+    "row = np.array([0, 1])\n",
+    "col = np.array([1, 2])\n",
+    "a2[row, col] = 0 # 팬시 인덱싱\n",
+    "print(a2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec63495d",
+   "metadata": {},
+   "source": [
+    "### 배열 값 삭제\n",
+    "- delete() : 배열의 특정 위치에 값 삭제  \n",
+    "- axis를 지정하지 않으면 1차원 배열로 전환  \n",
+    "- 삭제할 방향을 axis로 지정  \n",
+    "- 원본 배열 변경없이 새로운 배열 반환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "a9e2150b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9 4 3 4 4]\n",
+      "[9 3 4 4]\n",
+      "[9 4 3 4 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a1)\n",
+    "b1 = np.delete(a1, 1)\n",
+    "print(b1)\n",
+    "print(a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "716c2a66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 1]\n",
+      " [4 2 0]\n",
+      " [7 8 9]]\n",
+      "[[1 0 1]\n",
+      " [7 8 9]]\n",
+      "[[1 1]\n",
+      " [4 0]\n",
+      " [7 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a2)\n",
+    "b2 = np.delete(a2, 1, axis=0)\n",
+    "print(b2)\n",
+    "c2 = np.delete(a2, 1, axis=1)\n",
+    "print(c2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f783d990",
+   "metadata": {},
+   "source": [
+    "### 배열 복사\n",
+    " - 리스트 자료형과 달리 배열의 슬라이스는 복사본이 아님"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "9177c020",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 1]\n",
+      " [4 0 0]\n",
+      " [7 8 9]]\n",
+      "[[1 0]\n",
+      " [4 0]]\n",
+      "[[1 0]\n",
+      " [4 0]]\n",
+      "[[1 0]\n",
+      " [4 0]]\n",
+      "[[1 0 1]\n",
+      " [4 0 0]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a2)\n",
+    "print(a2[:2, :2])\n",
+    "a2_sub = a2[:2, :2] # copy() 를 안쓰면 원본까지 바뀜\n",
+    "print(a2_sub)\n",
+    "a2_sub[:, 1] = 0\n",
+    "print(a2_sub)\n",
+    "print(a2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b790f4d",
+   "metadata": {},
+   "source": [
+    "- copy() : 배열이나 하위 배열 내의 값을 명시적으로 복사"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "683e099a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 1]\n",
+      " [4 0 0]\n",
+      " [7 8 9]]\n",
+      "[[1 0]\n",
+      " [4 0]]\n",
+      "[[1 1]\n",
+      " [4 1]]\n",
+      "[[1 0 1]\n",
+      " [4 0 0]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a2)\n",
+    "a2_sub_copy = a2[:2, :2].copy() # copy() 를 써서 원본 안바뀜\n",
+    "print(a2_sub_copy)\n",
+    "a2_sub_copy[:, 1] = 1\n",
+    "print(a2_sub_copy)\n",
+    "print(a2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "728c4b2c",
+   "metadata": {},
+   "source": [
+    "## 4. 배열 변환"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07e187f5",
+   "metadata": {},
+   "source": [
+    "### 배열 전치 및 축 변경"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "0b381998",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 1]\n",
+      " [4 0 0]\n",
+      " [7 8 9]]\n",
+      "[[1 4 7]\n",
+      " [0 0 8]\n",
+      " [1 0 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a2)\n",
+    "print(a2.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "72a68100",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 2 3]\n",
+      "  [4 5 6]\n",
+      "  [7 8 9]]\n",
+      "\n",
+      " [[1 2 3]\n",
+      "  [4 5 6]\n",
+      "  [7 8 9]]\n",
+      "\n",
+      " [[1 2 3]\n",
+      "  [4 5 6]\n",
+      "  [7 8 9]]]\n",
+      "[[[1 1 1]\n",
+      "  [4 4 4]\n",
+      "  [7 7 7]]\n",
+      "\n",
+      " [[2 2 2]\n",
+      "  [5 5 5]\n",
+      "  [8 8 8]]\n",
+      "\n",
+      " [[3 3 3]\n",
+      "  [6 6 6]\n",
+      "  [9 9 9]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a3)\n",
+    "print(a3.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "f66deb14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 1]\n",
+      " [4 0 0]\n",
+      " [7 8 9]]\n",
+      "[[1 4 7]\n",
+      " [0 0 8]\n",
+      " [1 0 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a2)\n",
+    "print(a2.swapaxes(1, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "db8f4d04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 2 3]\n",
+      "  [4 5 6]\n",
+      "  [7 8 9]]\n",
+      "\n",
+      " [[1 2 3]\n",
+      "  [4 5 6]\n",
+      "  [7 8 9]]\n",
+      "\n",
+      " [[1 2 3]\n",
+      "  [4 5 6]\n",
+      "  [7 8 9]]]\n",
+      "[[[1 2 3]\n",
+      "  [1 2 3]\n",
+      "  [1 2 3]]\n",
+      "\n",
+      " [[4 5 6]\n",
+      "  [4 5 6]\n",
+      "  [4 5 6]]\n",
+      "\n",
+      " [[7 8 9]\n",
+      "  [7 8 9]\n",
+      "  [7 8 9]]]\n",
+      "[[[1 4 7]\n",
+      "  [2 5 8]\n",
+      "  [3 6 9]]\n",
+      "\n",
+      " [[1 4 7]\n",
+      "  [2 5 8]\n",
+      "  [3 6 9]]\n",
+      "\n",
+      " [[1 4 7]\n",
+      "  [2 5 8]\n",
+      "  [3 6 9]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a3)\n",
+    "print(a3.swapaxes(0, 1))\n",
+    "print(a3.swapaxes(1, 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc1fd374",
+   "metadata": {},
+   "source": [
+    "### 배열 재구조화"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73866676",
+   "metadata": {},
+   "source": [
+    "- reshape() : 배열의 형상을 변경"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "94ebcb86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = np.arange(1, 10)\n",
+    "print(n1)\n",
+    "print(n1.reshape(3, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0aac6d43",
+   "metadata": {},
+   "source": [
+    "- newaxis() : 새로운 축 추가"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "76477345",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "[[1 2 3 4 5]]\n",
+      "[[1]\n",
+      " [2]\n",
+      " [3]\n",
+      " [4]\n",
+      " [5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(n1)\n",
+    "print(n1[np.newaxis, :5])\n",
+    "print(n1[:5, np.newaxis])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38628f94",
+   "metadata": {},
+   "source": [
+    "### 배열 크기 변경"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35818994",
+   "metadata": {},
+   "source": [
+    "- 배열 모양만 변경"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "442b4557",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[9 3 9 4 7]\n",
+      " [6 0 7 9 6]]\n",
+      "[[9 3]\n",
+      " [9 4]\n",
+      " [7 6]\n",
+      " [0 7]\n",
+      " [9 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n2 = np.random.randint(0, 10, (2, 5))\n",
+    "print(n2)\n",
+    "n2.resize((5, 2))\n",
+    "print(n2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8914e1cd",
+   "metadata": {},
+   "source": [
+    "- 배열 크기 증가  \n",
+    "- 남은 공간은 0으로 채워짐"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "d9bad5fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[9 3 9 4 7]\n",
+      " [6 0 7 9 6]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n2.resize((5, 5))\n",
+    "print(n2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c46ea04",
+   "metadata": {},
+   "source": [
+    "- 배열 크기 감소  \n",
+    "- 포함되지 않은 값은 삭제됨"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "899e239f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[9 3 9]\n",
+      " [4 7 6]\n",
+      " [0 7 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n2.resize((3, 3))\n",
+    "print(n2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b85d2558",
+   "metadata": {},
+   "source": [
+    "### 배열 추가"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "180e8b2d",
+   "metadata": {},
+   "source": [
+    "- append() : 배열의 끝에 값 추가"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "81cb5ba9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "[[10 11 12]\n",
+      " [13 14 15]\n",
+      " [16 17 18]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a2 = np.arange(1, 10).reshape(3, 3)\n",
+    "print(a2)\n",
+    "b2 = np.arange(10, 19).reshape(3, 3)\n",
+    "print(b2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf609655",
+   "metadata": {},
+   "source": [
+    "- axis 지정이 없으면 1차원 배열 형태로 변형되어 결합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "3bb0156a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c2 = np.append(a2, b2)\n",
+    "print(c2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24246d3c",
+   "metadata": {},
+   "source": [
+    "- axis를 0으로 지정  \n",
+    "- shape[0]을 제외한 나머지 shape은 같아야 함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "0a6d3a59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]\n",
+      " [13 14 15]\n",
+      " [16 17 18]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c2 = np.append(a2, b2, axis=0)\n",
+    "print(c2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85fa1b63",
+   "metadata": {},
+   "source": [
+    "- axis를 1로 지정  \n",
+    "- shape[1]을 제외한 나머지 shape은 같아야 함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "de07bb79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3 10 11 12]\n",
+      " [ 4  5  6 13 14 15]\n",
+      " [ 7  8  9 16 17 18]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c2 = np.append(a2, b2, axis=1)\n",
+    "print(c2)"
    ]
   }
  ],
